--- a/pages/_app.css
+++ b/pages/_app.css
@@ -75,3 +75,11 @@ a {
   width: 20px;
   height: 20px;
 }
+
+.feed-item-dialog-content-html img {
+  display: block;
+  max-width: 100%;
+  max-height: 70vh;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
